[metadata]
name = imagecraft
version = attr: imagecraft.__version__
description="Create Ubuntu bootable images."
url = https://github.com/canonical/imagecraft
project_urls =
    Source = https://github.com/canonical/imagecraft.git
    Issues = https://github.com/canonical/imagecraft/issues
author = Canonical Ltd.
author_email = snapcraft@lists.snapcraft.io
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
python_requires = >= 3.10
include_package_data = True
packages = find:
zip_safe = False

[options.entry_points]
console_scripts =
    imagecraft = imagecraft.cli:run
    
[options.package_data]
imagecraft = py.typed

[options.packages.find]
exclude =
    tests
    tests.*

[bdist_wheel]
universal = 1

[flake8]
exclude = .direnv .git .mypy_cache .pytest_cache .venv __pycache__ venv build *.egg_info dist snap
max-line-length = 120
select= E,W,F,C,N
# E203 whitespace before ':'
# E503 line break before binary operator (Not PEP8 compliant, Python Black)
# W503 line break occurred before a binary operator
extend-ignore = E203,E503,W503

[mypy]
python_version = 3.10
plugins = pydantic.mypy
ignore_missing_imports = True

[pydantic-mypy]
init_forbid_extra = True
init_typed = True
warn_required_dynamic_aliases = True
warn_untyped_fields = True

[pydocstyle]
# D105 Missing docstring in magic method (reason: magic methods already have definitions)
# D107 Missing docstring in __init__ (reason: documented in class docstring)
# D203 1 blank line required before class docstring (reason: pep257 default)
# D205: 1 blank line required between summary line and description
# D213 Multi-line docstring summary should start at the second line (reason: pep257 default)
# D215 Section underline is over-indented (reason: pep257 default)
ignore = D105, D107, D203, D205, D213, D215
# Allow missing docstrings in methods that are overridden
ignore_decorators = override

[aliases]
test = pytest

[tool:pytest]
